--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +32,7 @@
     <h1>about me</h1>
     <h2>Carlos Martínez Ripollés</h2>
     <h3>Alumno ID3</h3>
-    <P>la etiqueta <em>em "emphasis"</em> es más semantica e importante que <i> "i" italic</i></P>
+    <P>la etiqueta <em>em "emphasis"</em> es más semántica e importante que <i> "i" italic</i></P>
     <P>la etiqueta <b>b "black"</b> es más semantica e importante que <strong> "strong" reforzada</strong></P>
     <h2>tipos de lista</h2>
     <ul>
@@ -46,7 +46,7 @@
     <ol>
         <li>freir aceite</li>
         <li> empanar</li>
-        <li> freir mezcla</li>
+        <li> freir croqueta</li>
         <li>sacar</li>
         
     </ol>
