--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-
+        <tittle>Portfolio Carlos Martínez Ripollés</tittle>
+        <link rel="stylesheet" type="text/css" href="/css/style.css"/>
     </head>
     <body>
         <nav>
