--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -24,7 +24,7 @@
         
 <p> <a class="mailVerde" mailto="">contact@gidimobile.com</a></p>
 
-<h2>Check us out on social media</h2>
+<h2 class="subtitulo">Check us out on social media</h2>
         <footer>
                 <div class="faceboook">aaa</div>
                 <div class="twiter">aaa</div>
